Setup CostExplorer backend and make it functional.